finish readme.md
